--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <meta charset="UTF-8"/>
         <meta name="viewpont" content="widht=device-widht, initial-scale=1.0"/>
         <title>Оно тебе надо</title>
-        <link rel="stylesheekl" href="./styles/fonts.css"/>
-        <link rel="stylesheekl" href="./styles/global.css"/>
+        <link rel="stylesheet" href="styles/global.css"/>
+        <link rel="stylesheet" href="styles/fonts.css"/>
     </head>
     <body>
         <header>
-            <menu>
-                <nav class="nav-header">
+                <nav class="nav_header">
+                    <!--не отображаются кружочки в меню-->
                     <ul>
                         <li>
                             <a>главная</a>
@@ -23,7 +23,7 @@
                         </li>
                     </ul>
                 </nav>
-                <a>
+                <a class="header_logo">
                     <img src="./images/frame.png"/>
                     <img src="./images/youneedit.png"/>
                 </a>
@@ -32,25 +32,112 @@
                     <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
                     <a>наб. Принсенграхт 263- 265, Амстердам</a>
                 </address>
-            </menu>
         </header>
-        <main>
-            <cover>
-                <h1></h1>
-                <div class="description"></div>
-            </cover>
-            <section class="lots">
-                <ul></ul>
-            </section>
-            <about>
-            </about>
-        </main>
+        <cover>
+            <div class="cover_overlay">
+                <div class="main_cover_text">
+                    <h1 class="main_cover_left">ОНО</h1>
+                    <h1 class="main_cover_center">ТЕБЕ</h1>
+                    <h1 class="main_cover_right">НАДО</h1>
+                </div>
+                <div class="description">
+                    <a class="description_subtitle">АУКЦИОН ВЕЩЕЙ, В КОТОРЫЕ НИКТО НЕ ВЕРИЛ</a>
+                    <button class="main-button"> Сделать ставку</button>
+                </div>
+            </div>
+        </cover>
+        <section>
+            <div class="lots">
+                <h1 class="lots__heading"> ЛОТЫ</h1>
+                <div class="overlay_lots">
+                    <ul class="lots__card-list">
+                        <li class="lots__card-list-item">
+                            <a class="card-link">
+                                <div class="card">
+                                    <article class="card_type_film">
+                                        <a class="card__title">Фильм режиссёра, который бросил киношколу</a>
+                                        <p class="card__text">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+                                    </article>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="lots__card-list-item">
+                            <a class="card-link">
+                                <div class="card">
+                                    <article class="card_type_book">
+                                        <a class="card__title">Книга, где описан один скучный день из жизни рекламного агента</a>
+                                        <p class="card__text">Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+                                    </article>
+                                </div>
+                            </a>
+                        </li>
+                        <li class="lots__card-list-item">
+                            <a class="card-link">
+                                <div class="card">
+                                    <article class="card_type_picture">
+                                        <a class="card__title">Картина, которую повторит даже 5-летний сын маминой подруги</a>
+                                        <p class="card__text">Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+                                    </article>
+                                </div>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+                <a class="lots__look-more-link">посмотреть больше</a>
+            </div>
+        </section>
+        <about>
+            <div class="about__column">
+                <div class="about__logo">
+                    <div class="about__logo-image">
+                        <img src="images/Ellipse 10.png" class="about__logo-image_ellipse"/>
+                        <img src="images/frame_write.png"/>
+                        <img src="images/youneed_write.png"/>
+                    </div>
+                </div>
+                <div class="about__text_block">
+                    <div class="about__title">
+                        <a>Об аукционе</a>
+                    </div>
+                    <div class="about__text">
+                        <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+                        <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+    на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>    
+                </div>
+                </div>
+            </div>
+        </about>
         <footer>
             <contacts>
+                <a href="tel:+99995555555">+9 999 555 5555</a>
+                <a href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+                <a>наб. Принсенграхт 263- 265, Амстердам</a>
             </contacts>
-            <nav>
+            <nav class="nav_footer">
+                    <ul class="footer__menu-list">
+                        <li class="footer__menu-list-item">
+                            <a class="footer__menu-link">главная</a>
+                        </li>
+                        <li class="footer__menu-list-item"></li>
+                            <a class="footer__menu-link">посмотреть лоты</a>
+                        </li>
+                        <li class="footer__menu-list-item"></li>
+                            <a class="footer__menu-link_active">об аукционе</a>
+                        </li>
+                    </ul>
             </nav>
-            <sosials>
+            <sosials class="footer__social-list">
+                <ul class="footer__social-list-item">
+                    <li class="footer__social-link">
+                        <img src="images/YouTube.png" class="footer__social-icon"/>
+                    </li>
+                    <li class="footer__social-link">
+                        <img src="images/VK.png" class="footer__social-icon"/>
+                    </li>
+                    <li class="footer__social-link">
+                        <img src="images/Pinterest.png" class="footer__social-icon"/>
+                    </li>
+                </ul>
             </sosials>
         </footer>
     </body>
