--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="styles/fonts.css"/>
     </head>
     <body>
+        <!--очень многое не так работало и не так отображалось. не понимаю как исправить-->
         <header>
                 <nav class="nav_header">
                     <!--не отображаются кружочки в меню-->
